--- a/src/Compoments/Home/ProductDescription/ProductDescription.module.css
+++ b/src/Compoments/Home/ProductDescription/ProductDescription.module.css
@@ -5,7 +5,6 @@
     align-items: flex-start;
     padding: 0px;
     gap: 8px;
-    margin-top: 16px;
 }
 
 .product_img {
