--- a/src/Compoments/ProductInfo/ProductInfo.module.css
+++ b/src/Compoments/ProductInfo/ProductInfo.module.css
@@ -10,7 +10,6 @@
 .img_container {
     display: flex;
     flex-direction: column;
-    gap: 16px;
     width: 100%;
     /* max-width: 488px; */
 }
@@ -26,6 +25,7 @@
     display: flex;
     gap: 8px;
     flex-wrap: wrap;
+    margin-top: 16px;
 }
 
 .product_other_img {
@@ -40,14 +40,12 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 20px;
 }
 
 .heading_container {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 32px;
     padding: 4px 0px;
     width: 100%;
 }
@@ -78,6 +76,7 @@
     line-height: 27px;
     letter-spacing: 0.005em;
     color: #2B2B2B;
+    margin-top: 20px;
 }
 
 @media screen and (min-width: 540px) {
